Fixes #637